crates/otlyra-app/tests/snapshots/surface_snapshot__the_open_menu_outline_is_stable.snap
---
source: crates/otlyra-app/tests/surface_snapshot.rs
expression: outline(&list)
---
fill #e4e4eaff (0.0, 0.0) 900.0x36.0
fill #ffffffff (0.0, 36.0) 900.0x42.0
fill #ffffffff (6.0, 4.0) 220.0x32.0
fill #1c1c21ff (19.2, 17.2) 5.6x5.6
glyphs n=20 size=13 #1c1c21ff at (35.0, 11.2)
stroke #1c1c21ff width=1.5 (204.0, 16.0) 7.9x7.9
fill #2f6fd6ff (241.2, 17.2) 5.6x5.6
glyphs n=29 size=13 #6e6e78ff at (257.0, 11.2)
stroke #1c1c21ff width=1.5 (426.0, 16.0) 7.9x7.9
fill #cfcfd7ff (450.0, 12.0) 1.0x16.0
fill #6e6e78ff (466.2, 17.2) 5.6x5.6
glyphs n=6 size=13 #6e6e78ff at (482.0, 11.2)
stroke #1c1c21ff width=1.5 (651.0, 16.0) 7.9x7.9
stroke #1c1c21ff width=1.6 (682.0, 13.0) 14.0x14.0
stroke #1c1c21ff width=1.7 (17.7, 50.8) 8.6x12.3
stroke #1c1c21ff width=1.7 (48.7, 50.8) 8.6x12.3
stroke #1c1c21ff width=1.6 (75.6, 49.3) 16.8x16.1
fill #1c1c21ff (77.7, 46.4) 6.4x6.9
fill #e4e4eaff (107.0, 42.0) 717.0x30.0
fill #d5d5ddff (107.0, 42.0) 717.0x30.0
fill #6e6e78ff (119.8, 55.9) 6.3x5.0
stroke #6e6e78ff width=1.4 (120.9, 53.8) 4.2x2.1
glyphs n=29 size=13 #1c1c21ff at (136.0, 48.2)
stroke #1c1c21ff width=1.5 (829.8, 45.2) 22.4x21.3
fill #1c1c21ff (868.5, 47.5) 18.9x18.9
fill #ffffffff (644.0, 76.0) 248.0x283.9
glyphs n=6 size=11 #6e6e78ff at (657.5, 86.5)
fill #1c1c21ff (660.1, 113.9) 10.8x10.8
glyphs n=8 size=13 #1c1c21ff at (682.5, 110.6)
glyphs n=2 size=11 #b4b4bdff at (871.5, 111.9)
stroke #1c1c21ff width=1.4 (659.7, 144.6) 11.5x11.5
stroke #1c1c21ff width=1.4 (665.5, 147.2) 2.6x3.2
glyphs n=7 size=13 #1c1c21ff at (682.5, 141.6)
glyphs n=2 size=11 #b4b4bdff at (867.0, 142.9)
fill #1c1c21ff (659.1, 174.6) 12.8x12.2
glyphs n=9 size=13 #1c1c21ff at (682.5, 172.6)
glyphs n=3 size=11 #b4b4bdff at (861.9, 173.9)
stroke #1c1c21ff width=1.5 (662.6, 206.6) 5.8x7.8
stroke #1c1c21ff width=1.5 (659.7, 216.4) 11.5x0.0
glyphs n=9 size=13 #1c1c21ff at (682.5, 203.6)
glyphs n=3 size=11 #b4b4bdff at (862.7, 204.9)
fill #cfcfd7ff (648.5, 228.3) 239.0x1.0
fill #1c1c21ff (659.1, 238.6) 12.8x12.2
glyphs n=18 size=13 #1c1c21ff at (682.5, 236.6)
glyphs n=2 size=11 #b4b4bdff at (866.4, 237.9)
stroke #b4b4bdff width=1.3 (662.1, 271.6) 6.7x9.6
glyphs n=11 size=13 #b4b4bdff at (682.5, 267.6)
glyphs n=2 size=11 #b4b4bdff at (867.4, 268.9)
stroke #1c1c21ff width=1.3 (662.1, 302.6) 6.7x9.6
glyphs n=7 size=13 #1c1c21ff at (682.5, 298.6)
glyphs n=3 size=11 #b4b4bdff at (865.8, 299.9)
fill #cfcfd7ff (648.5, 323.4) 239.0x1.0
stroke #1c1c21ff width=1.4 (659.7, 334.6) 11.5x11.5
fill #1c1c21ff (664.4, 336.7) 2.2x2.2
stroke #1c1c21ff width=1.5 (665.5, 339.8) 0.0x3.5
glyphs n=12 size=13 #1c1c21ff at (682.5, 331.6)
fill #d5d5ddff (644.0, 76.0) 248.0x283.9
fill #cfcfd7ff (0.0, 77.0) 900.0x1.0
